<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmailAddress"
        style="@style/Log.In.EditText"
        android:layout_marginTop="130dp"
        android:hint="@string/email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        style="@style/Log.In.EditText"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmailAddress" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="234dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/forgot_password"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:id="@+id/btnLogIn"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:backgroundTint="@color/red"
        android:onClick="onLogInClick"
        android:paddingVertical="14dp"
        android:text="@string/log_in"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnForgotPassword"

        />

</androidx.constraintlayout.widget.ConstraintLayout>