<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/dropdownMenu"
        android:layout_width="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="66dp"
        android:src="@drawable/profile_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/profile_photo_shape"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/tvContainer"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="42dp"
        android:layout_marginStart="51dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dropdownMenu"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_the"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_you_love"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSearch"
        style="@style/Log.In.EditText"
        android:layout_marginTop="24dp"
        android:hint="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContainer"/>

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="12sp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/etSearch"
        app:layout_constraintTop_toBottomOf="@id/etSearch"/>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFoodCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:layout_marginStart="42dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:paddingTop="8dp"
        android:paddingBottom="14dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_food_category"
        app:layout_constraintTop_toBottomOf="@id/tvCategory"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="36dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_food"
        app:layout_constraintTop_toBottomOf="@id/rvFoodCategory"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>